# InfoDashboard-public

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  PUBLIC_MIRROR.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/port_bsp/: CMakeLists.txt  display_bsp.cpp  display_bsp.h
firmware/components/user_app/: CMakeLists.txt  Kconfig.projbuild  dashboard_font_ui_10_1bpp.c  dashboard_font_ui_12_1bpp.c  dashboard_font_ui_16_1bpp.c  dashboard_font_ui_16m_1bpp.c  dashboard_font_ui_28_1bpp.c  dashboard_font_ui_consolas_bold_14_1bpp.c  dashboard_font_ui_consolas_regular_14_1bpp.c  dashboard_font_ui_segoe_semibold_16_1bpp.c  dashboard_layout.h  dashboard_style.cpp  dashboard_style.h  dashboard_text.h  dashboard_widgets.cpp  dashboard_widgets.h  user_app.cpp  user_app.h
firmware/main/: CMakeLists.txt  main.cpp
firmware/tools/: fetch_screenshot.py  generate_dashboard_fonts.ps1  ota_upload.ps1  preview_dashboard.py
